# TIPE-Nimber

./: .gitignore  Affichage_table_nimber.cmi  Affichage_table_nimber.cmx  Affichage_table_nimber.ml  Jeu_de_Nim.c  Kayles.cmi  Kayles.cmx  Kayles.ml  Makefile  Marienbad_reso.cmi  Marienbad_reso.cmx  Marienbad_reso.ml  Nim_func.cmi  Nim_func.cmx  Nim_func.ml  Nimber_Set.ml  Projet_Cram.ml  README.md  Twopins.cmi  Twopins.cmx  Twopins.ml  Union_find.ml  affichage_graph_marienbad.ml  affichage_nimber.ml  dots_and_boxes.c  nimber.ml  test  test.cmi  test.cmx  test.ml  time_exec.py
TIPE_Nimber/: TIPE_Nimber.opam  dune-project
TIPE_Nimber/_build/: .db  .digest-db  log
TIPE_Nimber/_build/default/: TIPE_Nimber.dune-package  TIPE_Nimber.install  TIPE_Nimber.opam
TIPE_Nimber/_build/default/lib/: Projet_Cram.ml  TIPE_Nimber.cma  TIPE_Nimber.cmxa  TIPE_Nimber.cmxs  Twopins.ml  tIPE_Nimber.ml-gen
TIPE_Nimber/_build/default/lib/.TIPE_Nimber.objs/: tIPE_Nimber__Affichage_table_nimber.impl.d  tIPE_Nimber__Affichage_table_nimber.intf.d  tIPE_Nimber__Kayles.impl.all-deps  tIPE_Nimber__Kayles.impl.d  tIPE_Nimber__Kayles.intf.d  tIPE_Nimber__Marienbad_reso.impl.d  tIPE_Nimber__Marienbad_reso.intf.d  tIPE_Nimber__Nim_func.impl.d  tIPE_Nimber__Nim_func.intf.d  tIPE_Nimber__Projet_Cram.impl.all-deps  tIPE_Nimber__Projet_Cram.impl.d  tIPE_Nimber__Projet_Cram.intf.d  tIPE_Nimber__Twopins.impl.all-deps  (+4 more)
TIPE_Nimber/lib/: Affichage_table_nimber.ml  Affichage_table_nimber.mli  Kayles.mli  Nim_func.ml  Projet_Cram.ml  Projet_Cram.mli  dune  main.ml
TIPE_Nimber/test/: TIPE_Nimber.ml  dune
(+47 files in other folders)
