(lang dune 3.7)

(name TIPE_Nimber)

(generate_opam_files true)

(source
 (github Vilitix/TIPE-Nimber))

(authors "Arthur Saltel")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name TIPE_Nimber)
 (synopsis "Projet TIPE sur le thème des nimber")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
